[workspace]
members = ['lustre-collector', 'lustrefs-exporter']
resolver = "3"

[workspace.package]
authors = ["EMF Team <emf@whamcloud.com>"]
edition = "2024"
license = "MIT"
version = "0.10.2"

[workspace.lints.rust]
unreachable_pub = "deny"

[workspace.lints.clippy]
cast_lossless = "warn"
cast_possible_wrap = "warn"
unwrap_used = "warn"

[workspace.dependencies]
axum = "0.8"
clap = "4"
combine = "=4.6.7"
const_format = "0.2"
iai-callgrind = "0.16"
include_dir = { version = "0.7", features = ["glob"] }
injectorpp = { git = "https://github.com/microsoft/injectorppforrust.git", branch = "main" }
insta = "1"
opentelemetry = "0.29.1"
opentelemetry-otlp = "0.29"
opentelemetry-semantic-conventions = { version = "0.29", features = [
    "semconv_experimental",
] }
opentelemetry_sdk = "0.29"
opentelemetry-prometheus = "0.29.1"
prometheus = "0.14"
prometheus-parse = "0.2.5"
serde = "1"
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = "1"
tokio-stream = "0.1"
tokio-util = "0.7"
tower = "0.5"
tracing = "0.1"
pretty_assertions = "1.4.1"
criterion = "0.6"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sysinfo = "0.29"

[profile.release]
lto = true

[profile.test]
opt-level = 0
debug = true
lto = false
codegen-units = 1
incremental = false

[profile.profiling]
debug = true
inherits = "release"
