[workspace]
members = ['lustre-collector', 'lustrefs-exporter']
resolver = "3"

[workspace.package]
authors = ["EMF Team <emf@whamcloud.com>"]
edition = "2024"
license = "MIT"
version = "0.10.2"

[workspace.lints.rust]
unreachable_pub = "deny"

[workspace.lints.clippy]
cast_lossless = "warn"
cast_possible_wrap = "warn"
unwrap_used = "warn"

[workspace.dependencies]
axum = "0.8"
clap = "4"
combine = "=4.6.7"
commandeer-test = "0.1.1"
const_format = "0.2"
criterion = "0.7"
iai-callgrind = "0.16"
include_dir = { version = "0.7", features = ["glob"] }
insta = "1"
pretty_assertions = "1.4.1"
prometheus-client = { git = "https://github.com/whamcloud/client_rust", branch = "whamcloud-08-12-2025" }
prometheus-parse = "0.2.5"
reqwest = "0.11"
serde = "1"
serde_json = "1"
serde_yaml = "0.9"
serial_test = "3.2"
sysinfo = "0.29"
thiserror = "2"
tokio = "1"
tower = "0.5"
tower-http = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true

[profile.profiling]
debug = true
inherits = "release"
