[package]
authors.workspace = true
description = "Scrapes Lustre stats and aggregates into JSON or YAML"
edition.workspace = true
license.workspace = true
name = "lustre_collector"
version.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
combine.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
include_dir.workspace = true
insta.workspace = true

[lib]
bench = false

[[bin]]
bench = false
name = "lustre_collector"
path = "src/main.rs"
