[package]
authors.workspace = true
edition.workspace = true
name = "lustrefs-exporter"
version.workspace = true

[dependencies]
axum = { workspace = true, features = ["http2"] }
clap = { workspace = true, features = ["derive", "env", "wrap_help", "string"] }
lustre_collector.path = "../lustre-collector"
opentelemetry = { workspace = true, features = ["metrics"] }
opentelemetry-prometheus.workspace = true
opentelemetry_sdk = { workspace = true, features = ["metrics", "rt-tokio"] }
prometheus.workspace = true
regex = { version = "1", default-features = false, features = [
  "perf",
  "std",
  "perf-dfa-full",
] }
serde = { version = "1", features = ["derive"] }
thiserror.workspace = true
tokio = { workspace = true, features = [
  "rt-multi-thread",
  "macros",
  "process",
] }
tokio-stream.workspace = true
tokio-util.workspace = true
tower = { workspace = true, features = ["timeout", "load-shed", "limit"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
combine.workspace = true
const_format.workspace = true
criterion = { workspace = true, features = ["html_reports", "async_tokio"] }
iai-callgrind.workspace = true
include_dir.workspace = true
injectorpp.workspace = true
insta.workspace = true
pretty_assertions.workspace = true
prometheus-parse.workspace = true
serde_json.workspace = true

[lib]
bench = false

[[bin]]
bench = false
name = "lustrefs-exporter"
path = "src/main.rs"

[[bench]]
harness = false
name = "jobstats"

[[bench]]
harness = false
name = "memory_scrape"
