[package]
authors.workspace = true
edition.workspace = true
name = "lustrefs-exporter"
version.workspace = true

[dependencies]
async-trait = "0.1"
axum = { workspace = true, features = ["http2"] }
clap = { workspace = true, features = ["derive", "env", "wrap_help", "string"] }
lustre_collector.path = "../lustre-collector"
mimalloc.workspace = true
prometheus-client.workspace = true
regex = { version = "1", default-features = false, features = [
  "perf",
  "std",
  "perf-dfa-full",
] }
sealed_test = { workspace = true }
serde = { version = "1", features = ["derive"] }
strum = { workspace = true }
strum_macros = { workspace = true }
sysinfo.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [
  "macros",
  "process",
  "rt-multi-thread",
  "signal"
] }
tokio-stream.workspace = true
tower = { workspace = true, features = ["timeout", "load-shed", "limit"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
xxhash-rust = { workspace = true, features = ["xxh3"] }

[dev-dependencies]
combine.workspace = true
commandeer-test.workspace = true
const_format.workspace = true
criterion = { workspace = true, features = ["html_reports", "async_tokio"] }
iai-callgrind.workspace = true
include_dir.workspace = true
insta.workspace = true
pretty_assertions.workspace = true
prometheus-parse.workspace = true
sealed_test.workspace = true
serde_json.workspace = true
serial_test.workspace = true
sysinfo.workspace = true

[lib]
bench = false

[[bin]]
bench = false
name = "lustrefs-exporter"
path = "src/main.rs"

[[bin]]
bench = false
name = "mock_bin"
path = "src/bin/mock_bin.rs"

[[bench]]
harness = false
name = "jobstats"

[[bench]]
harness = false
name = "lustre_metrics"

[[bench]]
harness = false
name = "scrape_memory_metrics"
