[package]
authors.workspace = true
edition.workspace = true
name = "lustrefs-exporter"
version.workspace = true

[dependencies]
axum = { workspace = true, features = ["http2"] }
clap = { workspace = true, features = ["derive", "env", "wrap_help", "string"] }
lustre_collector.path = "../lustre-collector"
memory-benchmarking = { version = "0.11.0", path = "../memory-benchmarking" }
prometheus-client.workspace = true
regex = { version = "1", default-features = false, features = [
  "perf",
  "std",
  "perf-dfa-full",
] }
serde = { version = "1", features = ["derive"] }
thiserror.workspace = true
tokio = { workspace = true, features = [
  "macros",
  "process",
  "rt-multi-thread",
] }
tower = { workspace = true, features = ["timeout", "load-shed", "limit"] }
tower-http = { workspace = true, features = ["compression-full"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
combine.workspace = true
commandeer-test.workspace = true
const_format.workspace = true
criterion = { workspace = true, features = ["html_reports", "async_tokio"] }
iai-callgrind.workspace = true
insta = { workspace = true, features = ["glob"] }
pretty_assertions.workspace = true
prometheus-parse.workspace = true
reqwest.workspace = true
serde_json.workspace = true
serial_test.workspace = true
sysinfo.workspace = true

[lib]
bench = false

[[bin]]
bench = false
name = "lustrefs-exporter"
path = "src/main.rs"

[[bench]]
harness = false
name = "jobstats"

[[bench]]
harness = false
name = "lustre_metrics"

[[bench]]
harness = false
name = "scrape_memory_metrics"
